2003-04-10  JMB  Windows CSV import bugfix

    In version 1.6, importing a CSV file on the Windows version would produce
    an empty error dialog and fail to update the display even though the
    import was successful; this has been corrected.

2003-04-03  JMB  Enum update bugfix, file overwrite warning

    When the value of an enum was changed, its index wasn't updated in the
    data table, so it was sorted and filtered as if its value hadn't changed;
    this has been corrected.

    The desktop versions now launch a confirmation dialog if you choose an
    existing file when selecting the path to a new PortaBase file.  Useful
    if you accidentally click "New" instead of "Open" and don't realize it.

2003-04-02  JMB  XML export bugfix, desktop import bugfix

    Version 1.6 accidentally exported an element called "gcrypt" indicating
    whether the source file was encrypted or not; this is no longer exported,
    and the XML import will gracefully ignore it if present.

    The desktop version of 1.6 prompted for a text encoding even when
    importing XML files and MobileDB files; this wasn't necessary and is
    no longer done.

2003-03-30  #################### PortaBase 1.6 ####################

2003-03-30  JMB  CSV import enhancements, menu update bugfix

    If an imported row doesn't have enough columns and the last few
    columns are strings or notes, PortaBase now treats those fields as
    empty strings.  (There often aren't enough delimiters at the end of
    lines ending with blank fields when exporting from programs like Excel,
    this just corrects for that.)

    CSV files can now be imported as either UTF-8 or Latin-1; this avoids
    the need for users importing files exported from other programs in
    Latin-1 to use another program to perform an encoding conversion.

    In version 1.5, making changes in the format editor would clear the
    view, sorting, and filter lists from the menus without restoring them;