@@ -1,5 +1,4 @@
 File properties dialog (size, rows, etc.)
-Alternate-row shading
 Option to hide navigation bar (and show all rows)
 Option to show Notes as multiline edit fields in row editor
 Pie chart of enum options in summary dialog
